# pai-oncology-trial-fl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PROPOSALS.md  Dockerfile  README.md  SECURITY.md  SECURITY_AUDIT.md  SESSION_SUMMARY.md  SUPPORT.md  V1_RELEASE.md  docker-compose.yml  environment.yml  posts.md  prompts.md  pyproject.toml  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
clinical-analytics/: README.md  analytics_orchestrator.py  clinical_interoperability.py  consortium_reporting.py  pkpd_engine.py  risk_stratification.py  survival_analysis.py  trial_data_manager.py
configs/: training_config.yaml
constraints/: lint.txt
digital-twins/: README.md
docs/: federated_training_demo.ipynb  repository_summaries.md
examples/: 01_federated_training_workflow.py  02_digital_twin_planning.py  03_cross_framework_validation.py  04_agentic_clinical_workflow.py  05_outcome_prediction_pipeline.py  README.md  generate_synthetic_data.py  run_federation.py
examples-physical-ai/: 01_realtime_safety_monitoring.py  02_multi_sensor_fusion.py  03_ros2_surgical_deployment.py  04_hand_eye_calibration.py  05_shared_autonomy_teleoperation.py  06_robotic_sample_handling.py  README.md
federated/: __init__.py  client.py  coordinator.py  data_harmonization.py  data_ingestion.py  differential_privacy.py  model.py  secure_aggregation.py  site_enrollment.py
generative-ai/: limitations.md  results.md  strengths.md
images/: README.md
paper/: README  arxiv.sty  main.tex  references.bib
peer-review/: v0.9.4-senior-peer-review.md  v0.9.5-peer-review-fixes.md  v0.9.6-senior-peer-review-recommendations.md  v0.9.7-peer-review-fixes.md  v0.9.8-senior-peer-review-recommendations.md  v0.9.9-peer-review-fixes.md
physical_ai/: __init__.py  digital_twin.py  framework_detection.py  robotic_integration.py  sensor_fusion.py  simulation_bridge.py  surgical_tasks.py
privacy/: README.md  __init__.py  access_control.py  audit_logger.py  breach_response.py  consent_manager.py  deidentification.py  phi_detector.py
(+324 files in other folders)
