[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pai-oncology-trial-fl"
version = "0.8.0"
description = "Federated machine learning framework for physical AI oncology trials"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kevin Kawchak"},
]
keywords = [
    "federated-learning",
    "oncology",
    "physical-ai",
    "clinical-trials",
    "privacy",
    "machine-learning",
    "digital-twins",
    "surgical-robotics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
    "pre-commit>=3.5.0",
]
torch = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]
docs = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "notebook>=7.0.0",
]
all = [
    "pai-oncology-trial-fl[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/kevinkawchak/pai-oncology-trial-fl"
Repository = "https://github.com/kevinkawchak/pai-oncology-trial-fl"
Issues = "https://github.com/kevinkawchak/pai-oncology-trial-fl/issues"

[tool.setuptools.packages.find]
include = ["federated*", "physical_ai*", "privacy*", "regulatory*", "unification*"]

# Ruff configuration is in ruff.toml (project root)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
